libpq.c3


/* Accessor functions for PGresult objects */
extern fn PGExecStatusType PQresultStatus(PGresult *res)
@extern("PQresultStatus");
extern fn char *PQresStatus(PGExecStatusType status) @extern("PQresStatus");
extern fn char *PQresultErrorMessage(PGresult *res)
@extern("PQresultErrorMessage");
extern fn char *PQresultVerboseErrorMessage(PGresult *res,
                                         PGVerbosity verbosity,
                                         PGContextVisibility show_context)
                                         @extern("PQresultVerboseErrorMessage");
extern fn char *PQresultErrorField(PGresult *res, int fieldcode)
@extern("PQresultErrorField");
extern fn int    PQntuples(PGresult *res) @extern("PQntuples");
extern fn int    PQnfields(PGresult *res) @extern("PQnfields");
extern fn int    PQbinaryTuples(PGresult *res) @extern("PQbinaryTuples");
extern fn char *PQfname(PGresult *res, int field_num) @extern("PQfname");
extern fn int    PQfnumber(PGresult *res, const char *field_name)
@extern("PQfnumber");
extern fn Oid    PQftable(PGresult *res, int field_num) @extern("PQftable");
extern fn int    PQftablecol(PGresult *res, int field_num)
@extern("PQftablecol");
extern fn int    PQfformat(PGresult *res, int field_num) @extern("PQfformat");
extern fn Oid    PQftype(PGresult *res, int field_num) @extern("PQftype");
extern fn int    PQfsize(PGresult *res, int field_num) @extern("PQfsize");
extern fn int    PQfmod(PGresult *res, int field_num) @extern("PQfmod");
extern fn char *PQcmdStatus(PGresult *res) @extern("PQcmdStatus");
extern fn char *PQoidStatus(PGresult *res)  @extern("PQoidStatus");   /* old and ugly */
extern fn Oid    PQoidValue(PGresult *res)  @extern("PQoidValue");   /* new and improved */
extern fn char *PQcmdTuples(PGresult *res) @extern("PQcmdTuples");
extern fn char *PQgetvalue(PGresult *res, int tup_num, int field_num)
@extern("PQgetvalue");
extern fn int    PQgetlength(PGresult *res, int tup_num, int field_num)
@extern("PQgetlength");
extern fn int    PQgetisnull(PGresult *res, int tup_num, int field_num)
@extern("PQgetisnull");
extern fn int    PQnparams(PGresult *res) @extern("PQnparams");
extern fn Oid    PQparamtype(PGresult *res, int param_num)
@extern("PQparamtype");

/* Describe prepared statements and portals */
extern fn PGresult *PQdescribePrepared(PGconn *conn, char *stmt)
@extern("PQdescribePrepared");
extern fn PGresult *PQdescribePortal(PGconn *conn, char *portal)
@extern("PQdescribePortal");
extern fn int    PQsendDescribePrepared(PGconn *conn, char *stmt)
@extern("PQsendDescribePrepared");
extern fn int    PQsendDescribePortal(PGconn *conn, char *portal)
@extern("PQsendDescribePortal");

/* Delete a PGresult */
extern fn void PQclear(PGresult *res) @extern("PQclear");

/* For freeing other alloc'd results, such as PGnotify structs */
extern fn void PQfreemem(void *ptr) @extern("PQfreemem");

/* Exists for backward compatibility.  bjm 2003-03-24 */
macro PQfreeNotify(ptr) {
    return PQfreemem(ptr);
}

/* Error when no password was given. */
/* Note: depending on this is deprecated; use PQconnectionNeedsPassword(). */
const char *PQnoPasswordSupplied = "fe_sendauth: no password supplied\n";

/* Create and manipulate PGresults */
extern fn PGresult *PQmakeEmptyPGresult(PGconn *conn, PGExecStatusType status)
@extern("PQmakeEmptyPGresult");
extern fn PGresult *PQcopyResult(PGresult *src, int flags)
@extern("PQcopyResult");
extern fn int    PQsetResultAttrs(PGresult *res, int numAttributes, PGresAttDesc
*attDescs) @extern("PQsetResultAttrs");
extern fn void *PQresultAlloc(PGresult *res, size_t nBytes)
@extern("PQresultAlloc");
extern fn size_t PQresultMemorySize(PGresult *res)
@extern("PQresultMemorySize");
extern fn int    PQsetvalue(PGresult *res, int tup_num, int field_num, char
*value, int len) @extern("PQsetvalue");

/* Quoting strings before inclusion in queries. */
extern fn size_t PQescapeStringConn(PGconn *conn,
                                 char *to, char *from, size_t length,
                                 int *error) @extern("PQescapeStringConn");
extern fn char *PQescapeLiteral(PGconn *conn, char *str, size_t len)
@extern("PQescapeLiteral");
extern fn char *PQescapeIdentifier(PGconn *conn, char *str, size_t len)
@extern("PQescapeIdentifier");
extern fn char *PQescapeByteaConn(PGconn *conn,
                                        char *from, size_t from_length,
                                        size_t *to_length)
                                        @extern("PQescapeByteaConn");
extern fn char *PQunescapeBytea(char *strtext,
                                      size_t *retbuflen)
                                      @extern("PQunescapeBytea");

/* These forms are deprecated! */
extern fn size_t PQescapeString(char *to, char *from, size_t length)
@extern("PQescapeString");
extern fn char *PQescapeBytea(char *from, size_t from_length,
                                    size_t *to_length) @extern("PQescapeBytea");



/* === in fe-print.c === */

extern fn void PQprint(FILE *fout, /* output stream */
                    PGresult *res,
                    PQprintOpt *po)  @extern("PQprint");   /* option structure */

/*
 * really old printing routines
 */
extern fn void PQdisplayTuples(PGresult *res,
                            FILE *fp,    /* where to send the output */
                            int fillAlign,    /* pad the fields with spaces */
                            char *fieldSep,    /* field separator */
                            int printHeader,    /* display headers? */
                            int quiet) @extern("PQdisplayTuples");

extern fn void PQprintTuples(PGresult *res,
                          FILE *fout,    /* output stream */
                          int PrintAttNames,    /* print attribute names */
                          int TerseOutput,    /* delimiter bars */
                          int colWidth)  @extern("PQprintTuples");   /* width of column, if 0, use
                                             * variable width */


/* === in fe-lobj.c === */

/* Large-object access routines */
extern fn int    lo_open(PGconn *conn, Oid lobjId, int mode) @extern("lo_open");
extern fn int    lo_close(PGconn *conn, int fd) @extern("lo_close");
extern fn int    lo_read(PGconn *conn, int fd, char *buf, size_t len)
@extern("lo_read");
extern fn int    lo_write(PGconn *conn, int fd, char *buf, size_t len)
@extern("lo_write");
extern fn int    lo_lseek(PGconn *conn, int fd, int offset, int whence)
@extern("lo_lseek");
extern fn long lo_lseek64(PGconn *conn, int fd, long offset, int whence)
@extern("lo_lseek64");
extern fn Oid    lo_creat(PGconn *conn, int mode) @extern("lo_creat");
extern fn Oid    lo_create(PGconn *conn, Oid lobjId) @extern("lo_create");
extern fn int    lo_tell(PGconn *conn, int fd) @extern("lo_tell");
extern fn long lo_tell64(PGconn *conn, int fd) @extern("lo_tell64");
extern fn int    lo_truncate(PGconn *conn, int fd, size_t len)
@extern("lo_truncate");
extern fn int    lo_truncate64(PGconn *conn, int fd, long len)
@extern("lo_truncate64");
extern fn int    lo_unlink(PGconn *conn, Oid lobjId) @extern("lo_unlink");
extern fn Oid    lo_import(PGconn *conn, char *filename) @extern("lo_import");
extern fn Oid    lo_import_with_oid(PGconn *conn, char *filename, Oid lobjId)
@extern("lo_import_with_oid");
extern fn int    lo_export(PGconn *conn, Oid lobjId, char *filename)
@extern("lo_export");

/* === in fe-misc.c === */

/* Get the version of the libpq library in use */
extern fn int    PQlibVersion() @extern("PQlibVersion");

/* Determine length of multibyte encoded char at *s */
extern fn int    PQmblen(char *s, int encoding) @extern("PQmblen");

/* Same, but not more than the distance to the end of string s */
extern fn int    PQmblenBounded(char *s, int encoding)
@extern("PQmblenBounded");

/* Determine display length of multibyte encoded char at *s */
extern fn int    PQdsplen(char *s, int encoding) @extern("PQdsplen");

/* Get encoding id from environment variable PGCLIENTENCODING */
extern fn int    PQenv2encoding() @extern("PQenv2encoding");

/* === in fe-auth.c === */

extern fn char *PQencryptPassword(char *passwd, const char *user)
@extern("PQencryptPassword");
extern fn char *PQencryptPasswordConn(PGconn *conn, char *passwd, const char
*user, const char *algorithm) @extern("PQencryptPasswordConn");

/* === in encnames.c === */

extern fn int    pg_char_to_encoding(char *name) @extern("pg_char_to_encoding");
extern fn char *pg_encoding_to_char(int encoding)
@extern("pg_encoding_to_char");
extern fn int    pg_valid_server_encoding_id(int encoding)
@extern("pg_valid_server_encoding_id");

/* === in fe-secure-openssl.c === */

/* Support for overriding sslpassword handling with a callback */
def PQsslKeyPassHook_OpenSSL_type = fn int (char *buf, int size, PGconn *conn);
extern fn PQsslKeyPassHook_OpenSSL_type PQgetSSLKeyPassHook_OpenSSL()
@extern("PQgetSSLKeyPassHook_OpenSSL");
extern fn void PQsetSSLKeyPassHook_OpenSSL(PQsslKeyPassHook_OpenSSL_type hook)
@extern("PQsetSSLKeyPassHook_OpenSSL");
extern fn int    PQdefaultSSLKeyPassHook_OpenSSL(char *buf, int size, PGconn
*conn) @extern("PQdefaultSSLKeyPassHook_OpenSSL");
